--- a/client/src/components/SignupCard/SignupCard.css
+++ b/client/src/components/SignupCard/SignupCard.css
@@ -224,7 +224,7 @@
   border-radius: 10px 10px 0 0;
   border-bottom: 2px solid var(--logo-color);
   background: var(--signin-inputs-color);
-  color: rgba(0, 0, 0, 0.25);
+  color: var(--logo-color);
   font-family: Inter;
   font-weight: 300;
   font-size: 15px;
